--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -403,7 +403,7 @@ code:
     defaultCodeValue: "Default Code Value"
     description: "Code Description"
     lang: "Language"
-    langCode: "Multilingual Code"
+    codeLang: "Multilingual Code"
     name: "Code Name"
     pCode: "Parent Code"
     searchPlaceholder: "Code"
@@ -413,7 +413,7 @@ code:
     editDescription: "Add, view and manage code."
     enterCode: "Please enter a code."
     enterPCode: "Please enter a Parent Code."
-    enterLangCodeValue: "Please enter the multilingual code value."
+    enterCodeLangValue: "Please enter the multilingual code value."
     pCodeNotExist: "Parent code does not exist."
     referenceCodeExist: "Code exists that references the code."
     selectNotDuplicateLang: "There are redundant multilingual options."
