#10260 관련문서 쿼리 튜닝

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1123,6 +1123,7 @@ token:
     list: "My Document List"
     print: "Process Document Print"
     relatedInstance: "Related Documents"
+    relatedInstancePlaceholder: "Document Name / Create User"
     searchPlaceholder: "Create User / Contents"
     startDt: "Start Date"
     tagPlaceHolder: "#Tags"
