#10402 문서 취소 처리시 취소 이력이 쌓이지가 않는다. -> 일감 분석 및 수정 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1129,6 +1129,7 @@ token:
     tagPlaceHolder: "#Tags"
     view: "Document View"
     write: "My Document"
+    process : "Process"
   msg:
     selectToken: "Check the related documents to be added."
     searchDescription: "View and search documents relating to me."
@@ -1138,6 +1139,12 @@ token:
     progress: "Document in progress"
     requested: "Application document"
     todo: "Document to process"
+  action:
+    withdraw: "withdraw"
+    reject: "reject"
+    cancel: "cancel"
+    terminate: "terminate"
+    finish: "finish"
 
 # WorkflowAdmin
 workflowAdmin:
