#10620 [폼 디자이너] 속성 영역(오른쪽 탭) 디자인 개선(1차)
- input 컴포넌트 기준으로 디자인 개선 작업 중

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -696,7 +696,7 @@ form:
     char: "문자"
     columnWidth: "컬럼 너비"
     common: "공통"
-    dataAttribute: "컴포넌트 속성"
+    dataAttribute: "데이터 속성"
     defaultType: "기본값 타입"
     department: "부서"
     desc: "설명"
