--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -691,54 +691,64 @@ form:
     text-default: "You can directly enter the default values displayed on the component, or choose between automatic input. In case of automatic input, one of user's session information can be selected."
     time-default: "You can set the default value displayed on the component.<br/>'Now' prints the current time.<br/>'hours later' means +, -hour from current time.<br/>The last item is used to show a specific time as fixed."
   properties:
-    align: "Align"
     auto: "Auto"
     char: "Character"
-    columnWidth: "Column Width"
     common: "Common"
     dataAttribute: "Data Attribute"
-    defaultType: "Default Value Type"
     department: "Department"
     desc: "Description"
     direct: "Direct"
-    display: "Display"
+    display:
+      columnWidth: "Column Width"
+      isAccordionUsed: "Accordion Use"
+      margin: "Margin"
+      padding: "Padding"
+      width: "Width"
     drTableColumns: "Table Column"
-    element: "Element"
+    element:
+      columnWidth: "Column Width"
+      defaultValueSelect: "Default Value Type"
     email: "Email"
-    fontColor: "Color"
-    fontOption: "Option"
-    fontSize: "Size"
+    group:
+      display: "Display"
+      element: "Element"
+      label: "Label"
+      option: "Option"
+      validation: "Validation"
     header: "Header"
     id: "ID"
-    isAccordionUsed: "Accordion Use"
     isTopic: "Is Topic"
     jobPosition: "Job Position"
-    label: "Label"
+    label:
+      align: "Align"
+      fontColor: "Color"
+      fontOption: "Option"
+      fontSize: "Size"
+      option: "Option"
+      position: "Position"
+      text: "Content"
+      visibility: "Visible"
     lengthMax: "Max Length"
     lengthMin: "Min Length"
     mapId: "Mapping Id"
-    margin: "Margin"
     mobileNumber: "Mobile Number"
     name: "Name"
     none: "None"
     number: "Number"
     officeNumber: "Office Number"
-    option: "Option"
-    padding: "Padding"
     phone: "Phone"
     placeholder: "Placeholder"
-    position: "Position"
     status: "Status"
     tags: "Tag"
-    text: "Content"
     title: "Form"
     userId: "User Id"
     userKey: "User Key"
     userName: "User Name"
     validate: "Validate"
-    validateType: "Validate Type"
-    visibility: "Visible"
-    width: "Width"
+    validation:
+      maxLength: "Max Length"
+      minLength: "Min Length"
+      validationType: "Validation Type"
   #TODO: form 리팩토링 후 attribute 삭제 예정
   attribute:
     align: "Align"
