--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1075,6 +1075,7 @@ scheduler:
   label:
     args: "Arguments"
     class: "Class"
+    command: "Command"
     cronExpression: "Cron Expression"
     description: "Description"
     edit: "Schedule Modify"
@@ -1093,6 +1094,7 @@ scheduler:
     schedule: "Schedule"
     scheduler: "Scheduler"
     searchPlaceholder: "Schedule Name / Execution Type / Class / Task Type"
+    src: Src
     status: "Status"
     taskType: "Task Type"
   msg:
