--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1075,6 +1075,7 @@ scheduler:
   label:
     args: "Arguments"
     class: "클래스"
+    command: "명령어"
     cronExpression: "크론표현식"
     description: "설명"
     edit: "스케줄 수정"
@@ -1093,6 +1094,7 @@ scheduler:
     schedule: "스케줄"
     scheduler: "스케줄러"
     searchPlaceholder: "스케줄 명 / 작업 유형 / 클래스 / 실행 유형"
+    src: 경로
     status: "상태"
     taskType: "작업 유형"
   msg:
