#10540 폼 리팩토링 - 신청서 양식 편집

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -725,6 +725,7 @@ form:
     userName: "User Name"
     validate: "Validate"
     validation:
+      required: "Required"
       maxLength: "Max Length"
       minLength: "Min Length"
       validationType: "Validation Type"
