#10747 폼 리팩토링 - image 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -740,6 +740,7 @@ image:
   label:
     name: "Image"
     list: "Image Management"
+    placeholder: "Select Your Image"
     popupTitle: "Select Image"
     upload: "Upload Your Image"
   msg:
