#10743 폼 리팩토링 - divider 컴포넌트
- 레이아웃 구성

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -679,10 +679,13 @@ form:
     desc: "Description"
     direct: "Direct"
     display:
+      color: "color"
       columnWidth: "Column Width"
       isAccordionUsed: "Accordion Use"
       margin: "Margin"
       padding: "Padding"
+      thickness: "Thickness"
+      type: "Type"
       width: "Width"
     drTableColumns: "Table Column"
     element:
@@ -709,6 +712,10 @@ form:
       visibility: "Visible"
     lengthMax: "Max Length"
     lengthMin: "Min Length"
+    lineType:
+      dash: "dash"
+      dot: "dot"
+      line: "line"
     mapId: "Mapping Id"
     mobileNumber: "Mobile Number"
     name: "Name"
