--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -679,10 +679,13 @@ form:
     desc: "설명"
     direct: "직접"
     display:
+      color: "색상"
       columnWidth: "컬럼 너비"
       isAccordionUsed: "아코디언 사용 여부"
       margin: "Margin"
       padding: "Padding"
+      thickness: "굵기"
+      type: "Type"
       width: "너비"
     drTableColumns: "테이블 컬럼"
     element:
@@ -709,6 +712,10 @@ form:
       visibility: "표시 여부"
     lengthMax: "최대길이"
     lengthMin: "최소길이"
+    lineType:
+      dash: "dash"
+      dot: "dot"
+      line: "line"
     mapId: "매핑 아이디"
     mobileNumber: "핸드폰 번호"
     name: "이름"
