#10747 폼 리팩토링 - image 컴포넌트

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -686,8 +686,12 @@ form:
       width: "너비"
     drTableColumns: "테이블 컬럼"
     element:
+      align: "정렬"
       columnWidth: "컬럼 너비"
       defaultValueSelect: "기본값 타입"
+      path: "경로"
+      width: "너비"
+      heigth: "높이"
     email: "Email"
     group:
       display: "출력속성"
