--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -686,8 +686,12 @@ form:
       width: "Width"
     drTableColumns: "Table Column"
     element:
+      align: "Align"
       columnWidth: "Column Width"
       defaultValueSelect: "Default Value Type"
+      path: "Path"
+      width: "Width"
+      heigth: "Height"
     email: "Email"
     group:
       display: "Display"
