--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -729,6 +729,8 @@ form:
       maxLength: "Max Length"
       minLength: "Min Length"
       validationType: "Validation Type"
+      maxDate: "Max Date"
+      minDate: "Min Date"
   status:
     destroy: "Destroy"
     edit: "Edit"
