#10743 폼 리팩토링 - divider 컴포넌트
- 속성 구현

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -684,15 +684,16 @@ form:
       isAccordionUsed: "Accordion Use"
       margin: "Margin"
       padding: "Padding"
-      thickness: "Thickness"
-      type: "Type"
       width: "Width"
     drTableColumns: "Table Column"
     element:
       align: "Align"
       columnWidth: "Column Width"
+      color: "color"
       defaultValueSelect: "Default Value Type"
       path: "Path"
+      thickness: "Thickness"
+      type: "Type"
       width: "Width"
       heigth: "Height"
     email: "Email"
