--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -684,15 +684,16 @@ form:
       isAccordionUsed: "아코디언 사용 여부"
       margin: "Margin"
       padding: "Padding"
-      thickness: "굵기"
-      type: "Type"
       width: "너비"
     drTableColumns: "테이블 컬럼"
     element:
       align: "정렬"
       columnWidth: "컬럼 너비"
+      color: "색상"
       defaultValueSelect: "기본값 타입"
       path: "경로"
+      thickness: "굵기"
+      type: "Type"
       width: "너비"
       heigth: "높이"
     email: "Email"
