#10741 date 컴포넌트 구현 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -687,6 +687,7 @@ form:
     drTableColumns: "Table Column"
     element:
       columnWidth: "Column Width"
+      defaultValue: "Default Value"
       defaultValueSelect: "Default Value Type"
     email: "Email"
     group:
