--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -687,6 +687,7 @@ form:
     drTableColumns: "테이블 컬럼"
     element:
       columnWidth: "컬럼 너비"
+      defaultValue: "기본값"
       defaultValueSelect: "기본값 타입"
     email: "Email"
     group:
