#10739 폼 리팩토링 - CI 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -689,6 +689,7 @@ form:
       align: "Align"
       columnWidth: "Column Width"
       defaultValueSelect: "Default Value Type"
+      isEditable: "Editable"
       path: "Path"
       width: "Width"
       heigth: "Height"
