폼 디자이너 세부 속성 이름 정리

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -642,6 +642,9 @@ form:
     searchDescription: "View and manage forms."
     selectImportFile: "Please select an import file."
     unique: "Duplicate data cannot be included."
+  form: "Form"
+  group: "Group"
+  row: "Row"
   component:
     checkBox: "Checkbox"
     customCode: "Custom Code"
