--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -642,6 +642,9 @@ form:
     searchDescription: "문서양식를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
     unique: "중복된 데이터는 포함할 수 없습니다."
+  form: "Form"
+  group: "Group"
+  row: "Row"
   component:
     checkBox: "Checkbox"
     customCode: "Custom Code"
