#10638 CMDB와 연동 데이터 간의 매핑 정보 설정 1. CMDB_CI 테이블에 mapping_id 컬럼 추가 2. CMDB_ATTRIBUTE 테이블에 mapping_id 컬럼 추가 3. Attribute 설정 화면에 매핑아이디 추가

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -273,6 +273,7 @@ cmdb:
       export: "내보내기"
       label: "라벨"
       management: "Attribute 관리"
+      mappingId: "매핑 아이디"
       name: "Attribute 명"
       option:
         check: "Check"
