--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -273,6 +273,7 @@ cmdb:
       export: "Export"
       label: "Label"
       management: "Attribute Management"
+      mappingId: "Mapping ID"
       name: "Attribute Name"
       option:
         check: "Check"
