#10748 폼 리팩토링 - label 컴포넌트 1. label 컴포넌트 구현

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -694,8 +694,12 @@ form:
       columnWidth: "Column Width"
       color: "color"
       defaultValueSelect: "Default Value Type"
+      fontColor: "Color"
+      fontSize: "Size"
+      fontOption: "Option"
       isEditable: "Editable"
       path: "Path"
+      text": "Content"
       thickness: "Thickness"
       type: "Type"
       width: "Width"
