--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -694,8 +694,12 @@ form:
       columnWidth: "컬럼 너비"
       color: "색상"
       defaultValueSelect: "기본값 타입"
+      fontColor: "색상"
+      fontSize: "크기"
+      fontOption: "옵션"
       isEditable: "편집가능 여부"
       path: "경로"
+      text: "내용"
       thickness: "굵기"
       type: "Type"
       width: "너비"
