#10751 폼 리팩토링 - textEditor 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -696,6 +696,8 @@ form:
       defaultValueSelect: "Default Value Type"
       isEditable: "Editable"
       path: "Path"
+      placeholder: "Placeholder"
+      rows: "Rows"
       thickness: "Thickness"
       type: "Type"
       width: "Width"
