--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -700,6 +700,7 @@ form:
       type: "Type"
       width: "Width"
       heigth: "Height"
+      options: "Option List"
     email: "Email"
     group:
       display: "Display"
