#10836 폼 리팩토링 - date 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -694,6 +694,7 @@ form:
       columnWidth: "Column Width"
       color: "color"
       defaultValue: "Default Value"
+      defaultValueRadio: "Default Value"
       defaultValueSelect: "Default Value Type"
       isEditable: "Editable"
       path: "Path"
