리뷰 후 수정사항 반영

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -758,7 +758,7 @@ form:
     option:
       none: "None"
       now: "Now"
-      date: "Date"
+      days: "Date"
   status:
     destroy: "Destroy"
     edit: "Edit"
