#10752 폼 리팩토링 - time 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -761,7 +761,7 @@ form:
       none: "None"
       now: "Now"
       days: "days after"
-      time: "hours after"
+      hours: "hours after"
   status:
     destroy: "Destroy"
     edit: "Edit"
