#10745 폼 리팩토링 - DR 테이블 컴포넌트 : 세부 속성 구현

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -680,6 +680,24 @@ form:
     auto: "Auto"
     char: "Character"
     common: "Common"
+    columnContent:
+      align: "정렬"
+      fontColor: "색상"
+      fontOption: "옵션"
+      fontSize: "크기"
+    columnHead:
+      align: "Align"
+      fontColor: "Color"
+      fontOption: "Option"
+      fontSize: "Size"
+    columnType:
+      input: "InputBox"
+      radio: "Radio Button"
+      checkbox: "CheckBox"
+      select: "DropDown"
+      date: "Date"
+      time: "Time"
+      dateTime: "DateTime"
     dataAttribute: "Data Attribute"
     department: "Department"
     desc: "Description"
@@ -696,6 +714,9 @@ form:
       align: "Align"
       columnWidth: "Column Width"
       color: "color"
+      columns: "Column"
+      columnName: "Column Name"
+      columnType: "Column Type"
       defaultValue: "Default Value"
       defaultValueRadio: "Default Value"
       defaultValueSelect: "Default Value Type"
@@ -710,6 +731,9 @@ form:
       options: "Option List"
     email: "Email"
     group:
+      columnContent: "Column Content"
+      columnElement: "Column Type Element"
+      columnHead: "Column Head"
       display: "Display"
       element: "Element"
       label: "Label"
