--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -680,6 +680,24 @@ form:
     auto: "자동"
     char: "문자"
     common: "공통"
+    columnContent:
+      align: "정렬"
+      fontColor: "색상"
+      fontOption: "옵션"
+      fontSize: "크기"
+    columnHead:
+      align: "정렬"
+      fontColor: "색상"
+      fontOption: "옵션"
+      fontSize: "크기"
+    columnType:
+      input: "InputBox"
+      radio: "Radio Button"
+      checkbox: "CheckBox"
+      select: "DropDown"
+      date: "Date"
+      time: "Time"
+      dateTime: "DateTime"
     dataAttribute: "데이터 속성"
     department: "부서"
     desc: "설명"
@@ -696,6 +714,9 @@ form:
       align: "정렬"
       columnWidth: "컬럼 너비"
       color: "색상"
+      columns: "컬럼 설정"
+      columnName: "컬럼명"
+      columnType: "입력 유형"
       defaultValue: "기본값"
       defaultValueRadio: "기본값"
       defaultValueSelect: "기본값 타입"
@@ -710,6 +731,9 @@ form:
       options: "옵션 목록"
     email: "Email"
     group:
+      columnContent: "컬럼 내용"
+      columnElement: "입력 유형별 엘리먼트"
+      columnHead: "컬럼 제목"
       display: "출력속성"
       element: "엘리먼트"
       label: "라벨"
