#10745 폼 리팩토링 - DR 테이블 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -692,13 +692,12 @@ form:
       fontOption: "Option"
       fontSize: "Size"
     columnType:
-      input: "InputBox"
-      radio: "Radio Button"
-      checkbox: "CheckBox"
-      select: "DropDown"
+      customCode: "Custom Code"
       date: "Date"
-      time: "Time"
       dateTime: "DateTime"
+      dropdown: "DropDown"
+      input: "InputBox"
+      time: "Time"
     dataAttribute: "Data Attribute"
     department: "Department"
     desc: "Description"
