--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -692,13 +692,12 @@ form:
       fontOption: "옵션"
       fontSize: "크기"
     columnType:
-      input: "InputBox"
-      radio: "Radio Button"
-      checkbox: "CheckBox"
-      select: "DropDown"
+      customCode: "Custom Code"
+      dropdown: "DropDown"
       date: "Date"
-      time: "Time"
       dateTime: "DateTime"
+      input: "InputBox"
+      time: "Time"
     dataAttribute: "데이터 속성"
     department: "부서"
     desc: "설명"
@@ -733,7 +732,7 @@ form:
     email: "Email"
     group:
       columnContent: "컬럼 내용"
-      columnElement: "입력 유형별 엘리먼트"
+      columnElement: "입력 유형 엘리먼트"
       columnHead: "컬럼 제목"
       display: "출력속성"
       element: "엘리먼트"
