#10745 폼 리팩토링 - DR 테이블 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -716,6 +716,7 @@ form:
       color: "color"
       columns: "Column"
       columnName: "Column Name"
+      columnOrder: "Column Order"
       columnType: "Column Type"
       defaultValue: "Default Value"
       defaultValueRadio: "Default Value"
