--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -716,6 +716,7 @@ form:
       color: "색상"
       columns: "컬럼 설정"
       columnName: "컬럼명"
+      columnOrder: "순서"
       columnType: "입력 유형"
       defaultValue: "기본값"
       defaultValueRadio: "기본값"
