리뷰 후 수정사항 반영

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -735,6 +735,7 @@ form:
       columnContent: "Column Content"
       columnElement: "Column Type Element"
       columnHead: "Column Head"
+      columnValidation: "Column Type Element Validation"
       display: "Display"
       element: "Element"
       label: "Label"
