#10740 CustomCode 컴포넌트 - 중간에 계속해서 많이 변경이 되서..   다시 작성함.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -679,6 +679,7 @@ form:
       vertical: "Vertical"
       horizontal: "Horizontal"
     auto: "Auto"
+    buttonText: "Button Text"
     char: "Character"
     common: "Common"
     columnContent:
@@ -698,8 +699,12 @@ form:
       dropdown: "DropDown"
       input: "InputBox"
       time: "Time"
+    customCode: "Custom Code"
     dataAttribute: "Data Attribute"
     department: "Department"
+    default:
+      session: "Session"
+      code: "Code"
     desc: "Description"
     direct: "Direct"
     display:
