#10742 폼 리팩토링 - dataTime 컴포넌트 중간 커밋(datetime 상수화 변경전 )

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -786,6 +786,7 @@ form:
     option:
       none: "None"
       now: "Now"
+      day: "Day"
       days: "days after"
       hours: "hours after"
   status:
