#10742 폼 리팩토링 - dataTime 컴포넌트 중간 커밋(MR전 최종 )

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -63,10 +63,10 @@ common:
     requiredSelect: "필수 항목을 선택하세요."
     save: "저장되었습니다."
     selectAfterDate: "{0} 날짜 이후로 선택하세요."
-    selectAfterDateTime: "{0} 날짜 시간 이후로 선택하세요."
+    selectAfterDateTime: "{0} 이후로 선택하세요."
     selectAfterTime: "{0} 시간 이후로 선택하세요."
     selectBeforeDate: "{0} 날짜 이전으로 선택하세요."
-    selectBeforeDateTime: "{0} 날짜 시간 이전으로 선택하세요."
+    selectBeforeDateTime: "{0} 이전으로 선택하세요."
     selectBeforeTime: "{0} 시간 이전으로 선택하세요."
     success: "성공하였습니다."
     update: "변경되었습니다."
