--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -679,7 +679,6 @@ form:
       vertical: "Vertical"
       horizontal: "Horizontal"
     auto: "자동"
-    buttonText: "버튼 텍스트"
     char: "문자"
     common: "공통"
     columnContent:
@@ -717,6 +716,7 @@ form:
     drTableColumns: "테이블 컬럼"
     element:
       align: "정렬"
+      buttonText: "버튼 텍스트"
       columnWidth: "컬럼 너비"
       color: "색상"
       columns: "컬럼 설정"
@@ -724,6 +724,7 @@ form:
       columnOrder: "순서"
       columnType: "입력 유형"
       defaultValue: "기본값"
+      DefaultValueCustomCode: "Custom Code"
       defaultValueRadio: "기본값"
       defaultValueSelect: "기본값 타입"
       isEditable: "편집가능 여부"
