#10716 신청서내 관련문서에서 취소처리 된 문서는 보여지지 말아야한다. -> 일감 분석 및 수정 진행

--- a/plugins/deleteTempCIData/configuration.properties
+++ b/plugins/deleteTempCIData/configuration.properties
@@ -2,5 +2,5 @@ dbType=postgresql
 host=10.0.10.175
 port=32784
 database=itsm
-username=itsm
-password=itsm123
+username=ENC(97iU8ckIQyNKR+jJF7xz/w==)
+password=ENC(64TAJlkjjxtS6FXzG0tTNA==)
