#10622 스케줄러 환경설정 파일 암호화 기능 -> 암호화 관련 수정 진행

--- a/plugins/deleteTempFile/configuration.properties
+++ b/plugins/deleteTempFile/configuration.properties
@@ -2,8 +2,8 @@ dbType=postgresql
 host=10.0.10.175
 port=32784
 database=itsm
-username=ENC(97iU8ckIQyNKR+jJF7xz/w==)
-password=ENC(64TAJlkjjxtS6FXzG0tTNA==)
+username=97iU8ckIQyNKR+jJF7xz/w==
+password=64TAJlkjjxtS6FXzG0tTNA==
 fileUploadDir=D:\\files
 aliceImageTempDir=avatar/temp/
 tempDirectoryName=temp
