--- a/plugins/deleteTempCIData/configuration.properties
+++ b/plugins/deleteTempCIData/configuration.properties
@@ -2,5 +2,5 @@ dbType=postgresql
 host=10.0.10.175
 port=32784
 database=itsm
-username=ENC(97iU8ckIQyNKR+jJF7xz/w==)
-password=ENC(64TAJlkjjxtS6FXzG0tTNA==)
+username=97iU8ckIQyNKR+jJF7xz/w==
+password=64TAJlkjjxtS6FXzG0tTNA==
