--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -450,6 +450,7 @@ customCode:
     searchDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드를 조회 및 관리합니다."
     selectNotDuplicateSearchColumn: "조건 항목에 검색 컬럼을 중복 없이 선택하세요."
     viewDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드에 대한 상세 정보를 조회합니다."
+    checkUseYnValue: "사용자 사용 여부는 true 혹은 false 값만 입력 가능합니다."
 
 # Dashboard
 dashboard:
