#10988 CMDB - Class, Type 정렬 순서 추가
- CMDB Class, Type에 정렬 순서 추가 함(화면에서 정렬되게 나올 수 있도록 수정)
- 개발 DB에 적용하기 위한 초기 스크립트 준비(cmdb_class.class_seq, cmdb_type.type_seq 추가)
- CMDB Class에서 Class와 Type이 매핑이 된 상태에서 삭제 시도 시  "관련된 Type이 있습니다."라고 메시지 출력 하도록 수정(FK가 있기 때문에 삭제 불가)
- CMDB Class에서 하위 Class가 있을 경우 속성을 읽기 전용으로 수정(삭제 할 수도 없는데 삭제 버튼이 보이는 것이 이상함)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -356,32 +356,37 @@ cmdb:
       name: "Name"
       pClassName: "Parent Class"
       searchPlaceholder: "Class Name / Description"
+      seq: "Sort Order"
     msg:
       confirmDeleteAttribute: "Are you sure you want to delete the attribute?"
-      enterAttributeList: "Excluding the parent attribute list, there must be at least one own attribute list."
       editDescritpion: "Add, view and manage CMDB Class."
+      enterAttributeList: "Excluding the parent attribute list, there must be at least one own attribute list."
       enterClassName: "Please enter a class name."
+      enterClassSeq: "Enter the sort order."
+      relatedTypes: "There are related types."
     btn:
       import: "Import"
       export: "Export"
   type:
     label:
       alias: "Alias"
-      management: "Type Management"
-      searchPlaceholder: "Type"
-      parentType: "Parent Type"
-      name: "Type Name"
+      class: "Class"
       description: "Description"
       icon: "Icon"
-      class: "Class"
+      management: "Type Management"
+      name: "Type Name"
+      parentType: "Parent Type"
+      searchPlaceholder: "Type"
+      seq: "Sort Order"
     msg:
-      searchDescription: "CI Type manage posts."
       enterPType: "Please choose Parent Type node."
       enterTypeAlias: "Please enter a Type Alias."
       enterTypeName: "Please enter a Type Name."
-      selectType: "Please select a Type."
+      enterTypeSeq: "Enter the sort order."
+      searchDescription: "CI Type manage posts."
       selectAvailableClass: "Please select a available Class."
       selectAvailableType: "Please select a available Type."
+      selectType: "Please select a Type."
     btn:
       import: "Import"
       export: "Export"
