--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -356,32 +356,37 @@ cmdb:
       name: "이름"
       pClassName: "부모 Class"
       searchPlaceholder: "Class 명 / 설명"
+      seq: "정렬 순서"
     msg:
       confirmDeleteAttribute: "속성을 삭제하시겠습니까?"
-      enterAttributeList: "부모 속성목록을 제외한 본인 속성목록은<br>반드시 1개 이상이여야 합니다."
       editDescription: "CI Class를 조회 및 관리합니다."
+      enterAttributeList: "부모 속성목록을 제외한 본인 속성목록은<br>반드시 1개 이상이여야 합니다."
       enterClassName: "Class 이름을 입력하세요."
+      enterClassSeq: "정렬 순서를 입력하세요."
+      relatedTypes: "관련된 Type이 있습니다."
     btn:
       import: "가져오기"
       export: "내보내기"
   type:
     label:
       alias: "식별자"
-      management: "Type 관리"
-      searchPlaceholder: "Type"
-      parentType: "부모 Type"
-      name: "Type 명"
+      class: "Class"
       description: "설명"
       icon: "아이콘"
-      class: "Class"
+      management: "Type 관리"
+      name: "Type 명"
+      parentType: "부모 Type"
+      searchPlaceholder: "Type"
+      seq: "정렬 순서"
     msg:
-      searchDescription: "CI Type을 조회 및 관리합니다."
       enterPType: "부모 Type을 선택하세요."
       enterTypeAlias: "식별자를 입력하세요."
       enterTypeName: "Type 명을 입력하세요."
-      selectType: "Type을 선택하세요."
+      enterTypeSeq: "정렬 순서를 입력하세요."
+      searchDescription: "CI Type을 조회 및 관리합니다."
       selectAvailableClass: "유효한 Class를 선택하세요."
       selectAvailableType: "유효한 Type를 선택하세요."
+      selectType: "Type을 선택하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
