--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -937,6 +937,8 @@ notification:
 
 # Portal
 portal:
+  btn:
+    main: "Portal Main"
   label:
     bottomPhrase: "Can't find what you're looking for?"
     browserGuidePhrase: "Your web browser is not supported. Please use the browser below."
