#10875 [화면구조 리팩토링] 화면 상단 구현 1. 상단 메뉴 추가 (사용자 정보, 알림, 로그아웃) 2. 왼쪽메뉴 hover 일부 수정

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -6,6 +6,7 @@ common:
     check: "확인"
     close: "닫기"
     delete: "삭제"
+    editUserInfo: "회원 정보 수정"
     list: "목록"
     logout: "로그아웃"
     modify: "수정"
