--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -6,6 +6,7 @@ common:
     check: "CHECK"
     close: "CLOSE"
     delete: "DELETE"
+    editUserInfo: "Edit User"
     list: "LIST"
     logout: "LOGOUT"
     modify: "MODIFY"
