#10891 보고서용 차트 추가 -> Activity-gauge 차트 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -263,6 +263,7 @@ chart:
     stackedColumn: "Stacked Column Chart"
     stackedBar: "Stacked Bar Chart"
     lineAndColumn: "Line And Column Chart"
+    activityGauge: "Activity Gauge Chart"
 
 # CMDB
 cmdb:
