--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -792,8 +792,10 @@ form:
       minLength: "Min Length"
       validationType: "Validation Type"
       maxDate: "Max Date"
+      maxDateTime: "Max Date Time"
       maxTime: "Max Time"
       minDate: "Min Date"
+      minDateTime: "Min Date Time"
       minTime: "Min Time"
     option:
       none: "None"
