#11018 스케줄러 정기적인 실행시 이력이 출력되지 않은 현상 및 오류 수정 1. CRON 타입의 최소값 및 자릿수 수정 2. 정기적인 실행시 이력이 추가되지 않은 현상 수정 (각 타입별)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -54,6 +54,7 @@ common:
     enterContents: "Please enter contents"
     enterTitle: "Please enter a title."
     fail: "Failed."
+    minValue: "Minimum input is {0}"
     modify: "Modified."
     noData: "There is no data."
     onlySaveInEdit: "It cannot be saved in the publish/edit. Please edit in the edit"
