--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -54,6 +54,7 @@ common:
     enterContents: "내용을 입력하세요."
     enterTitle: "제목을 입력하세요."
     fail: "실패하였습니다."
+    minValue: "최소 입력값은 {0} 입니다."
     modify: "수정되었습니다."
     noData: "데이터가 없습니다."
     onlySaveInEdit: "발행/사용 단계에서는 수정이 불가합니다.<br>편집상태로 변경후 수정하세요."
