--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -70,6 +70,7 @@ common:
     selectBeforeDate: "{0} 날짜 이전으로 선택하세요."
     selectBeforeDateTime: "{0} 이전으로 선택하세요."
     selectBeforeTime: "{0} 시간 이전으로 선택하세요."
+    selectColor: "색상을 선택하세요."
     success: "성공하였습니다."
     update: "변경되었습니다."
   code:
@@ -1204,6 +1205,7 @@ user:
     user: "사용자"
   msg:
     createUser: "사용자가 등록되었습니다."
+    customColorSave: "사용자 색상이 아직 저장되지 않았습니다.<br/>사용자 색상이 초기화 됩니다."
     editDescription: "사용자를 등록하거나, 사용자 정보를 수정합니다."
     editSelfDescription: "개인 정보를 수정합니다."
     emailAlert: "이메일 변경 시, 인증 절차가 필요합니다."
