#9818 제품 정보 출력 -> 구현 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -870,6 +870,7 @@ menu:
     boardAdmin: "Board management"
     code: "Code management"
     parent: "System config"
+    product: "Product Info"
     role: "Role"
     scheduler: "Scheduler"
     user: "User"
