--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1138,6 +1138,21 @@ scheduler:
   result:
     true: "Success"
     false: "Failed"
+  tooltip:
+    fixedDelay: "• FIXED_DELAY sets a fixed time from when the previous job is finished.<br/><br/>
+    • Millisecond (ms) is specified as the basic unit, and 1000 milliseconds is specified as 1 second.<br/><br/>
+    • A minimum of 60000 milliseconds (1 minute) and a maximum of 10 digits can be entered."
+    fixedRate: "• FIXED_RATE sets a fixed time from when the previous operation started..<br/><br/>
+    • Millisecond (ms) is specified as the basic unit, and 1000 milliseconds is specified as 1 second.<br/><br/>
+    • A minimum of 60000 milliseconds (1 minute) and a maximum of 10 digits can be entered."
+    cron: "• Basically, it has the format of ' * * * * * * * ', and consists of a total of 7 fields.<br/><br/>
+    • The first field: Defines Seconds and has an allowable range of 0 to 59.<br/><br/>
+    • The second field: Defines Minutes and has an allowable range of 0 to 59.<br/><br/>
+    • The third field: defines the hours and has an allowable range of 0 to 23.<br/><br/>
+    • The Fourth field: Defines Day of month and has an allowable range of 1 to 31.<br/><br/>
+    • The Fifth field: Defines the month and has an allowable range of 1 to 12 or JAN to DEC.<br/><br/>
+    • The Sixth field: Defines the day of the week and has an allowable range of 0 to 6 or SUN to SAT.<br/><br/>
+    • The Seventh field: Defines Year, and has an allowable range of 1970-2099 or omitted."
 
 # Token
 token:
