--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1185,7 +1185,9 @@ workflowAdmin:
 # User
 user:
   btn:
+    nextTime: "{0}일 후 변경하기"
     resetPassword: "비밀번호 초기화"
+    updatePassword: "비밀번호 변경"
   label:
     avatar: "아바타"
     customSetting: "맞춤설정"
@@ -1199,6 +1201,9 @@ user:
     lang: "언어"
     mobileNumber: "휴대폰 번호"
     name: "이름"
+    newUserPassword: "새 비밀번호"
+    newUserRePassword: "새 비밀번호 확인"
+    nowUserPassword: "현재 비밀번호"
     officeNumber: "사무실 번호"
     password: "비밀번호"
     position: "직책"
@@ -1212,6 +1217,7 @@ user:
     time: "시간 유형"
     timeFormat: "날짜/시간 유형"
     timezone: "타임존"
+    updatePasswordNotice: "비밀번호 변경 안내"
     usageStatus: "사용자 사용 여부"
     user: "사용자"
   msg:
@@ -1221,18 +1227,25 @@ user:
     editSelfDescription: "개인 정보를 수정합니다."
     emailAlert: "이메일 변경 시, 인증 절차가 필요합니다."
     emailWithUpdate: "이메일 정보를 포함한 회원 정보가 수정되었습니다."
+    enterNowUserPassword: "현재 비밀번호를 입력하세요."
+    enterNewUserPassword: "새 비밀번호를 입력하세요."
+    enterNewUserRePassword: "새 비밀번호 확인을 입력하세요."
     enterUserEmail: "이메일을 입력하세요."
     enterUserId: "아이디를 입력하세요."
     enterUserName: "이름을 입력하세요."
     enterUserPassword: "비밀번호를 입력하세요."
     enterUserRePassword: "재확인 비밀번호를 입력하세요."
+    notEqualNewPassword: "새 비밀번호가 일치하지 않습니다."
+    notEqualNowPassword: "현재 비밀번호가 일치하지 않습니다."
     passwordNotEquals: "비밀번호가 일치하지 않습니다."
     resetPassword: "비밀번호가 초기화되었습니다."
+    sameAsCurrentPassword: "새 비밀번호가 현재 비밀번호와 동일합니다.<br> 다른 비밀번호를 사용하세요."
     sameEmail: "이미 사용중인 이메일입니다."
     sameUserId: "동일한 아이디가 존재합니다."
     searchDescription: "사용자를 조회 및 관리합니다."
     signUp: "가입되었습니다.<br/>가입 시 등록한 메일에서 인증을 진행하세요."
     signUpFail: "가입 실패되었습니다."
+    updatePasswordNotice: "개인정보보호와 안전한 시스템 사용을 위해 {0} 일 마다 비밀번호 변경을</br> 권장하고 있사오니, 비밀번호를 변경하세요."
     usageStatus: "※ 미사용 시, 로그인 및 모든 시스템 사용이 불가능합니다."
   tooltip:
     idRule: "• 영문, 숫자, 특수문자(@, ., -, _) 사용 가능.<br/><br/>
@@ -1247,6 +1260,12 @@ user:
      • 사용자의 이메일 ID를 포함하지 않는다.<br/>
      &nbsp;&nbsp; 예) 이메일ID가 zenius인 경우,<br/>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  zeniu는 포함 가능, zenius는 포함 불가<br/><br/>
+     • 공백을 허용하지 않는다.<br/>"
+    pwRuleSummary: "• 2가지 이상의 문자 종류(대문자, 소문자, 특수문자, 숫자)인 경우,<br/>
+     &nbsp; 8자 이상 20자 미만, 1가지 종류의 문자 구성인 경우 10자 이상<br/>
+     &nbsp; 20자 미만의 비밀번호 입력 제한 범위를 가진다.<br/><br/>
+     • 사용자의 ID를 포함하지 않는다.<br/><br/>
+     • 사용자의 이메일 ID를 포함하지 않는다.<br/><br/>
      • 공백을 허용하지 않는다.<br/>"
 
 # Validation
