#10923 페이징 처리 - 다국어정리

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -29,6 +29,7 @@ common:
     colon: ":"
     count: "total {0}"
     createDate: "Create Date"
+    createDtDesc: "Order by create date"
     createUser: "Create User"
     customColor: "Custom User Color"
     delete: "Delete"
@@ -41,6 +42,8 @@ common:
     success: "Success"
     tag: "Tag"
     title: "Title"
+    totalCountWithoutCondition: "({0}) data total {1}"
+    totalPageNum: "total {0} page"
     update: "Update"
     updateDate: "Update Date"
     updateUser: "Update User"
@@ -48,7 +51,6 @@ common:
     writer: "Writer"
   msg:
     confirmDelete: "Are you sure you want to delete?"
-    customColorSave: "Your color has not been saved yet.<br/>Your color will be reset."
     dataSelect: "Please select data."
     delete: "Deleted."
     deleteTartget: "Please select target."
@@ -1238,6 +1240,7 @@ user:
     user: "User"
   msg:
     createUser: "User is registered."
+    customColorSave: "Your color has not been saved yet.<br/>Your color will be reset."
     editDescription: "Register users or modify user information."
     editSelfDescription: "Edit your personal information."
     emailAlert: "When you change your email, you need to verify."
@@ -1268,17 +1271,19 @@ user:
     ※ Do not allow spaces."
     pwRule: "※ At least two types of characters (upper case, lower case, special characters, numbers),
     &nbsp;&nbsp;&nbsp;&nbsp;More than 8 characters, less than 8 characters, if one kind character used, 10~20 length limit
+
     ※ Do not include your ID.<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;예) If the ID is zenius, zeniu comprises available, zenius is not included.<br/><br/>
+    &nbsp;&nbsp;&nbsp;&nbsp;ex) If the ID is zenius, zeniu comprises available, zenius is not included.<br/><br/>
+
     ※ Do not include your email ID.<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;예) If the e-mail ID zenius, zeniu comprises available<br/>
+    &nbsp;&nbsp;&nbsp;&nbsp;ex) If the e-mail ID zenius, zeniu comprises available<br/>
+
     ※ Do not allow spaces.<br/>"
     pwRuleSummary: "※ At least two types of characters (upper case, lower case, special characters, numbers),
     &nbsp;&nbsp;&nbsp;&nbsp;More than 8 characters, less than 8 characters, if one kind character used, 10~20 length limit
     ※ Do not include your ID.<br/><br/>
     ※ Do not include your email ID.<br/><br/>
     ※ Do not allow spaces.<br/>"
-
 
 
 # Validation
